--- a/public/styles.scss
+++ b/public/styles.scss
@@ -12,7 +12,7 @@ body {
 header {
     width: 100%;
     min-height: 60px;
-    padding: 0 2% 0 3%;
+    padding: 0 3%;
     box-shadow: 0 1px 5px -4px;
     display: flex;
     align-items: center;
