--- a/views/home.pug
+++ b/views/home.pug
@@ -205,19 +205,4 @@ html(lang='en')
                             a(href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;tf=1&amp;source=mailto&amp;to=worldhail41@gmail.com"
                             target="blank") Send Email
                     p.contact-details-statement We can grab some coffee or something...
-        footer
-            .footer-icons
-                i.fa-brands.fa-github
-                i.fa-brands.fa-codepen
-                i.fa-brands.fa-facebook
-                i.fa-brands.fa-linkedin
-            .footer-line
-            ul.nav-categories
-                li Home
-                li Projects
-                li About
-                li Contact
-            .footer-line
-            p.copyright © 2023 Jeric Chua
-                br
-                | Made with passion
+        include ./includes/footer.pug
