--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -188,4 +188,9 @@ footer {
   background-color: #d4d4d4;
   height: 2px;
   margin: 20px 0;
-}/*# sourceMappingURL=header-footer.css.map */
+}
+
+.test {
+  color: blue;
+  background-color: red;
+}
