Add padding top to the pages

--- a/public/scss/project.scss
+++ b/public/scss/project.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: auto;
     background-color: white;
-    padding: 0 5% 60px;
+    padding: 30px 5% 60px;
 }
 
 .see-project-btn {
