--- a/public/scss/about.scss
+++ b/public/scss/about.scss
@@ -23,7 +23,8 @@
 
 .design-guide {
     width: 250px;
-    height: 180px;
+    height: 280px;
+    padding-top: 50px;
     margin: auto;
     position: relative;
     color: rgb(164, 164, 166);
@@ -32,7 +33,7 @@
         font-size: 24px;
         font-weight: 600;
         position: absolute;
-        top: 40px;
+        top: 90px;
         line-height: 1rem;
     }
 
@@ -50,7 +51,7 @@
         // background-color: rgb(164, 164, 166);
         background-color: #A7AABD;
         position: absolute;
-        bottom: 10px;
+        bottom: 30px;
         right: 0;
     }
 
@@ -61,7 +62,7 @@
         // background-color:#247ae3;
         position: absolute;
         right: 25px;
-        bottom: -10px;
+        bottom: 10px;
     }
 }
 
