--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -21,11 +21,15 @@ header {
   position: fixed;
   top: 0;
   z-index: 1;
-  transition: 0.3s ease-in-out;
 }
 
 .hide-header {
   transform: translateY(-100%);
+  transition: 0.3s ease-in-out;
+}
+
+.header-back-transition {
+  transition: 0.3s ease-in-out;
 }
 
 .logo-container {
