--- a/public/scss/layout.scss
+++ b/public/scss/layout.scss
@@ -21,11 +21,15 @@ header {
     position: fixed;
     top: 0;
     z-index: 1;
-    transition: .3s ease-in-out;
 }
 
 .hide-header {
     transform: translateY(-100%);
+    transition: .3s ease-in-out;
+}
+
+.header-back-transition {
+    transition: .3s ease-in-out;
 }
 
 .logo-container {
