Add hover to underline the link for nav categoris on footer

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -192,6 +192,10 @@ footer {
   color: white;
 }
 
+.underline:hover {
+  text-decoration: underline;
+}
+
 .footer-line {
   background-color: #d4d4d4;
   height: 2px;
