--- a/public/scss/layout.scss
+++ b/public/scss/layout.scss
@@ -205,6 +205,10 @@ footer {
     }
 }
 
+.underline:hover {
+    text-decoration: underline;
+}
+
 .footer-line {
     background-color: #d4d4d4;
     height: 2px;
