--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -133,7 +133,6 @@ nav {
 
 .categories {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -155,14 +154,19 @@ nav {
 .categories a:visited {
   color: white;
 }
-.categories .category-list:hover a {
+.categories .currentPage {
   background-color: #2983F8;
+  color: white;
   padding: 5px 10px;
   border-radius: 20px;
 }
-.categories .contact {
-  background-color: #2983F8;
-  color: white;
+
+.categories:hover .currentPage {
+  background-color: rgb(34, 34, 34);
+}
+
+.category-list:hover a {
+  background-color: #2983F8 !important;
   padding: 5px 10px;
   border-radius: 20px;
 }
