--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -30,67 +30,8 @@ block page-content
                 alt="3 different screen sizes" 
                 width="800px" 
                 height="580px")
-    section#projects
-        .project-header
-            h1.project-heading Projects
-            p.project-heading-description
-                cite Made with 
-                | good user experience
-        .calculator-container
-            .calculator-image-container
-                img.calculator-image(
-                src="img/simple-caculator-project.png"
-                alt="calculator"
-                loading="lazy"
-                width="300px"
-                height="477px")
-            .calculator-project-title Calculator
-            p.calculator-description
-                | A simple calculator that can solve mathematical problems such as
-                | addition, subtraction, multiplication, division, and getting the
-                | percentage. Additionally, it can use negative signs when needed.
-                br
-                a.description-link(href="https://worldhail.github.io/calculator/" target="_blank") Try it!
-                    i.fa-solid.fa-arrow-right
-        button.btn-typ.see-project-btn SEE ALL PROJECTS
-    section.web-skills
-        h1 Web Development Skills
-        .logo-placeholder-wrapper
-            .logo-placeholder
-                img(
-                src="img/html-logo.png"
-                alt="HTML logo"
-                loading="lazy"
-                width="200px"
-                height="200px")
-            .logo-placeholder
-                img(
-                src="img/css-logo.png"
-                alt="CSS logo"
-                loading="lazy"
-                width="200px"
-                height="200px")
-            .logo-placeholder
-                img(
-                src="img/javascript-logo.png"
-                alt="Javascript logo"
-                loading="lazy"
-                width="372px"
-                height="378px")
-            .logo-placeholder
-                img(
-                src="img/github-logo.png"
-                alt="Github logo"
-                loading="lazy"
-                width="200px"
-                height="200px")
-            .logo-placeholder
-                img(
-                src="img/git-logo.png"
-                alt="git logo"
-                loading="lazy"
-                width="200px"
-                height="200px")
+    include ./project-content.pug
+    include ./skills-content.pug
     section.marketing-section
         .marketing-questions
             p
@@ -98,87 +39,11 @@ block page-content
                 | Are you planning to have a website?
             p
                 i.fa-solid.fa-spinner
-                | Did your experience slow performance on your website?
+                | Did you experience slow performance on your website?
             p
                 i.fa-solid.fa-bug 
                 | Have you encountered some bugs on your website?
             p IF SO, YOU'RE ON THE RIGHT PAGE!
-    section#about-me
-        .profile-container
-            .design-guide
-                p
-                    | self-
-                    br
-                    | tau
-                    span: i.fa.fa-solid.fa-search
-                    | ht
-                .profile-placeholder
-                    img(src="img/profile.png" alt="profile picture" width="400px" height="400px")
-                .horizontal-line
-                .vertical-line
-        article
-            h2 Who Am I?
-            p.
-                I'm Jeric Chua! I'm from Dumaguete City, Negros Oriental,
-                Philippines. I started learning web development because I have a
-                strong passion for finding the best possible ways of solving
-                problems, where user experience and website/application
-                functionalities play a huge impact in my interest.
-        article
-            h2 My mission
-            p.
-                User experience and runtime performance are one of my priorities while
-                having a good user interface. Therefore, I want to provide user interactivity 
-                where it's non-complex but instead useful, important, and needed based on
-                the website's content.
-        article
-            h2 My story
-            p.
-                My learning journey started when I was a Customer Service Representative in a
-                BPO company where I always opened a website and used tools for my tasks. With
-                the tools I've used, I felt insufficient for the controls and interactivity on
-                what is needed to make it easy as a user. Technically, I've realized that I
-                don't want to continue growing even though I became an ad hoc support
-                collaborating with the Quality Assurance Team because it didn't make me feel
-                that I am performing well as what I'm passionate about. I've questioned myself
-                about what I want in life, what makes me happy, and what I can do. To answer
-                that, I like fixing errors in technology, I like to create something professional
-                where design is simple, easy, and useful, and lastly, I remember when I was in
-                first-year college that I was really excited about my programming language class
-                where we structure some patterns on what's the best way to execute the desired
-                result. So these questions and answers led me to study web development. I started
-                this field before moving to applications or beyond because I wanted to understand
-                the web before anything else. It takes so much hard work and patience to be on
-                this journey but overall, I know I can do it because this is where I see myself
-                and it's addicting when you're making your life in a sense.
-        article.about-competitive-advantage
-            h2 Competitive Advantage
-            div
-                h4 Communication: 
-                p.
-                    Along with my knowledge on web development, I am able to write and
-                    speak well in spoken English. I can communicate, discuss and give
-                    my thoughts about the project that I'll be part of working on in
-                    the future.
-            div
-                h4 Typography & Accessibility: 
-                p.
-                    I'm a very meticulous person when it comes to
-                    typography and its accessibility.
-            div
-                h4 Clean & Readable Code: 
-                p I make sure that my codes are clean and readable.
-            div
-                h4 Professional-looking & Quality Product: 
-                p.
-                    I'm not a designer. However, I can present a professional-looking and
-                    quality product.
-            div
-                h4 Enhance & Image Optimization: 
-                p.
-                    I have basic knowledge on photo editing using Adobe Photoshop
-                    whenever it needs to enhace the image or optimize for web use and
-                    better loading times.
     section.contact-details-section
         .contact-details-background
             h1.contact-details-heading LET'S DISCUSS YOUR NEEDS
