--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -13,7 +13,7 @@ block page-content
                 I like building websites with an eagerness to provide the best possible
                 user experience and browser performance.
             .know-more-container
-                button.know-more-btn Know me more!
+                button.know-more-btn: a(href='about') Know me more!
                 i.fa-solid.fa-arrow-pointer
         .design-objects
             .project-direction
