--- a/views/pages/about-content.pug
+++ b/views/pages/about-content.pug
@@ -74,5 +74,10 @@ section#about-me
                 I have basic knowledge on photo editing using Adobe Photoshop
                 whenever it needs to enhace the image or optimize for web use and
                 better loading times.
+.go-to-project
+    h1 Knowing may not be enough.
+        span IF YOU HAVEN'T CHECKED MY PROJECTS YET,
+        | Experience and explore them.
+    button.btn-typ: a(href='project') GO TO PROJECT
 
 link(rel='stylesheet' type='text/css' href='css/about.css')
