--- a/views/pages/about-content.pug
+++ b/views/pages/about-content.pug
@@ -75,7 +75,7 @@ section#about-me
                 whenever it needs to enhace the image or optimize for web use and
                 better loading times.
 .go-to-project
-    h1 Knowing may not be enough.
+    p Knowing may not be enough.
         span IF YOU HAVEN'T CHECKED MY PROJECTS YET,
         | Experience and explore them.
     button.btn-typ: a(href='project') GO TO PROJECT
