--- a/public/scss/about.scss
+++ b/public/scss/about.scss
@@ -96,12 +96,13 @@
     margin: auto;
     background-color: rgb(242, 243, 251);
 
-    h1 {
+    p {
         margin-bottom: 40px;
         font-size: 60px;
         background: linear-gradient(to right, #3378cd, #4377d1, #5079ab);
         background-clip: text;
         -webkit-text-fill-color: transparent;
+        font-weight: bolder;
     }
 
     .btn-typ {
