Add media queries for project

--- a/public/scss/project.scss
+++ b/public/scss/project.scss
@@ -101,3 +101,13 @@
     }
 }
 
+@media screen and (min-width: 768px) {
+    #projects {
+        padding: 30px 8% 60px;
+    }
+
+    .project-heading {
+        font-size: 55px;
+    }
+}
+
