--- a/public/css/project.css
+++ b/public/css/project.css
@@ -92,4 +92,13 @@
 }
 .description-link:visited {
   color: #245492;
+}
+
+@media screen and (min-width: 768px) {
+  #projects {
+    padding: 30px 8% 60px;
+  }
+  .project-heading {
+    font-size: 55px;
+  }
 }/*# sourceMappingURL=project.css.map */
