--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -24,4 +24,13 @@
 .logo-placeholder img {
   width: 100%;
   height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .web-skills {
+    padding: 70px 8%;
+  }
+  .web-skills h1 {
+    font-size: 55px;
+  }
 }/*# sourceMappingURL=skills.css.map */
