--- a/public/scss/skills.scss
+++ b/public/scss/skills.scss
@@ -28,3 +28,13 @@
         height: 100%;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .web-skills {
+        padding: 70px 8%;
+
+        h1 {
+            font-size: 55px;
+        }
+    }
+}
