--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -59,4 +59,10 @@
   text-decoration: none;
   font-size: 1rem;
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .main-contact-page {
+    padding: 10% 6%;
+  }
 }/*# sourceMappingURL=contact.css.map */
