--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -69,3 +69,9 @@
         color: white;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .main-contact-page {
+        padding: 10% 6%;
+    }
+}
