Add media query for layout

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -209,4 +209,13 @@ footer {
   background-color: #d4d4d4;
   height: 2px;
   margin: 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+  header {
+    padding: 0 5%;
+  }
+  footer {
+    padding: 20px 5%;
+  }
 }/*# sourceMappingURL=layout.css.map */
