Change Know me more to Learn more

--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -4,7 +4,8 @@ block page-content
     section#home-page
         .brief-introduction
             h2#name Hi,
-            and I'm Jeric Chua
+                br
+                | I'm Jeric Chua
             p.descriptive-profession
                 i A self-taught 
                     span.profession web developer
@@ -13,7 +14,7 @@ block page-content
                 I like building websites with an eagerness to provide the best possible
                 user experience and browser performance.
             .know-more-container
-                button.know-more-btn: a(href='about') Know me more!
+                button.know-more-btn: a(href='about') Learn more!
                 i.fa-solid.fa-arrow-pointer
         .design-objects
             .project-direction
