Increase font-size

--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -17,7 +17,7 @@
 
 .descriptive-profession {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: 100;
     color: #424656;
 
@@ -33,13 +33,14 @@
 
 .short-objective {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     line-height: 1.3rem;
+    font-weight: 300;
 }
 
 .know-more-container {
     position: relative;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .know-more-btn {
