--- a/public/css/about.css
+++ b/public/css/about.css
@@ -114,4 +114,15 @@
   display: block;
   font-size: 20px;
   margin: 50px auto;
+}
+
+@media screen and (min-width: 768px) {
+  #about-me article {
+    padding: 0 15%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .go-to-project p {
+    font-size: 60px;
+  }
 }/*# sourceMappingURL=about.css.map */
