--- a/public/scss/about.scss
+++ b/public/scss/about.scss
@@ -131,3 +131,15 @@
         margin: 50px auto;
     }
 }
+
+@media screen and (min-width: 768px) {
+    #about-me article {
+        padding: 0 15%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .go-to-project p {
+        font-size: 60px;
+    }
+}
