--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -9,6 +9,10 @@ body {
   min-height: 100vh;
 }
 
+main {
+  background-color: white;
+}
+
 header {
   width: 100%;
   min-height: 60px;
@@ -76,19 +80,11 @@ header {
   background-color: black;
 }
 
-nav {
-  width: 100%;
-  height: 100%;
-  font-size: 1.2rem;
-  position: fixed;
-  z-index: 1;
-  pointer-events: none;
-}
-
 .hidden-overlay {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
+  z-index: -1;
   background-color: rgba(0, 0, 0, 0.6);
   opacity: 0;
   will-change: opacity;
@@ -113,8 +109,11 @@ nav {
   width: 75%;
   height: 100%;
   padding-top: 60px;
-  background-color: rgb(34, 34, 34);
-  position: absolute;
+  font-size: 1.2rem;
+  background-color: rgb(36, 36, 36);
+  position: fixed;
+  z-index: 3;
+  pointer-events: auto;
   left: 100%;
   will-change: transform;
 }
@@ -133,8 +132,6 @@ nav {
 
 .categories {
   width: 100%;
-  display: flex;
-  flex-direction: column;
   text-align: center;
   list-style: none;
   transform: translateX(50px);
@@ -143,32 +140,20 @@ nav {
 .categories.transition {
   transition: transform 0.5s;
 }
-.categories li {
-  padding: 1.4rem;
-  color: white;
-}
 .categories a {
+  display: inline-block;
   font-family: "Gill Sans", "Gill Sans MT", Calibri;
   text-decoration: none;
-}
-.categories a:visited {
+  padding: 1.4rem;
   color: white;
+  width: 100%;
 }
 .categories .currentPage {
-  background-color: #2983F8;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 20px;
+  color: #2983F8;
 }
 
 .categories:hover .currentPage {
   background-color: rgb(34, 34, 34);
-}
-
-.category-list:hover a {
-  background-color: #2983F8 !important;
-  padding: 5px 10px;
-  border-radius: 20px;
 }
 
 footer {
@@ -217,5 +202,49 @@ footer {
   }
   footer {
     padding: 20px 5%;
+  }
+}
+@media screen and (min-width: 992px) {
+  header {
+    min-height: 70px;
+  }
+  nav {
+    width: 478.484px;
+    height: 70px;
+    position: fixed;
+    right: 5%;
+    z-index: 2;
+  }
+  .hidden-overlay {
+    display: none;
+  }
+  .header-interaction {
+    display: none;
+  }
+  .hide-header {
+    transform: none;
+  }
+  .ul-wrapper {
+    position: initial;
+    width: auto;
+    height: auto;
+    padding-top: 0;
+    background-color: white;
+  }
+  .ul-wrapper .fa-arrow-right {
+    display: none;
+  }
+  .categories {
+    display: flex;
+    transform: none;
+  }
+  .categories a {
+    color: rgb(34, 34, 34);
+  }
+  .categories a:hover {
+    color: #2983F8;
+  }
+  .logo-container {
+    scale: 1.2;
   }
 }/*# sourceMappingURL=layout.css.map */
