--- a/public/scss/layout.scss
+++ b/public/scss/layout.scss
@@ -9,6 +9,10 @@ body {
     min-height: 100vh;
 }
 
+main {
+    background-color: white;
+}
+
 header {
     width: 100%;
     min-height: 60px;
@@ -79,18 +83,19 @@ header {
 }
 
 nav {
-    width: 100%;
-    height: 100%;
-    font-size: 1.2rem;
-    position: fixed;
-    z-index: 1;
-    pointer-events: none;
+    // width: 0;
+    // height: 0;
+    // font-size: 1.2rem;
+    // position: fixed;
+    // z-index: 1;
+    // pointer-events: none;
 }
 
 .hidden-overlay {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
+    z-index: -1;
     background-color: rgba(0, 0, 0, .6);
     opacity: 0;
     will-change: opacity;
@@ -116,8 +121,11 @@ nav {
     width: 75%;
     height: 100%;
     padding-top: 60px;
-    background-color: rgb(34, 34, 34);
-    position: absolute;
+    font-size: 1.2rem;
+    background-color: rgb(36, 36, 36);
+    position: fixed;
+    z-index: 3;
+    pointer-events: auto;
     left: 100%;
     will-change: transform;
 
@@ -138,8 +146,6 @@ nav {
 
 .categories {
     width: 100%;
-    display: flex;
-    flex-direction: column;
     text-align: center;
     list-style: none;
     transform: translateX(50px);
@@ -149,39 +155,23 @@ nav {
         transition: transform .5s;
     }
 
-    li {
-        padding: 1.4rem;
-        color: white;
-    }
-
     a {
+        display: inline-block;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri;
         text-decoration: none;
-
-        &:visited {
-            color: white;
-        }
+        padding: 1.4rem;
+        color: white;
+        width: 100%;
     }
 
     .currentPage {
-        background-color: #2983F8;
-        color: white;
-        padding: 5px 10px;
-        border-radius: 20px;
+        color: #2983F8;
     }
 }
 
 .categories:hover {
     .currentPage {
         background-color: rgb(34, 34, 34);
-    }
-}
-
-.category-list:hover {
-    a {
-        background-color: #2983F8 !important;
-        padding: 5px 10px;
-        border-radius: 20px;
     }
 }
 
@@ -235,5 +225,60 @@ footer {
 
     footer {
             padding: 20px 5%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    header {
+        min-height: 70px;
+    }
+
+    nav {
+        width: 478.484px;
+        height: 70px;
+        position: fixed;
+        right: 5%;
+        z-index: 2;
+    }
+
+    .hidden-overlay {
+        display: none;
+    }
+
+    .header-interaction {
+        display: none;
+    }
+
+    .hide-header {
+        transform: none;
+    }
+
+    .ul-wrapper {
+        position: initial;
+        width: auto;
+        height: auto;
+        padding-top: 0;
+        background-color: white;
+
+        .fa-arrow-right {
+            display: none;
+        }
+    }
+
+    .categories {
+        display: flex;
+        transform: none;
+
+        a {
+            color: rgb(34, 34, 34);
+
+            &:hover {
+                color: #2983F8;
+            }
+        }
+    }
+
+    .logo-container {
+        scale: 1.2;
     }
 }
