--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -207,6 +207,7 @@ footer {
 @media screen and (min-width: 992px) {
   header {
     min-height: 70px;
+    box-shadow: none;
   }
   nav {
     width: 478.484px;
@@ -219,6 +220,17 @@ footer {
     display: none;
   }
   .header-interaction {
+    background-color: transparent;
+    width: 100%;
+    height: 9px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    box-shadow: 0 2px 5px -4px;
+    opacity: 0;
+    transition: 0.3s;
+  }
+  .header-interaction a, .header-interaction div {
     display: none;
   }
   .hide-header {
@@ -229,7 +241,7 @@ footer {
     width: auto;
     height: auto;
     padding-top: 0;
-    background-color: white;
+    background-color: transparent;
   }
   .ul-wrapper .fa-arrow-right {
     display: none;
