--- a/public/scss/layout.scss
+++ b/public/scss/layout.scss
@@ -82,15 +82,6 @@ header {
     background-color: black;
 }
 
-nav {
-    // width: 0;
-    // height: 0;
-    // font-size: 1.2rem;
-    // position: fixed;
-    // z-index: 1;
-    // pointer-events: none;
-}
-
 .hidden-overlay {
     width: 100%;
     height: 100%;
@@ -231,6 +222,7 @@ footer {
 @media screen and (min-width: 992px) {
     header {
         min-height: 70px;
+        box-shadow: none;
     }
 
     nav {
@@ -246,7 +238,19 @@ footer {
     }
 
     .header-interaction {
-        display: none;
+        background-color: transparent;
+        width: 100%;
+        height: 9px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        box-shadow: 0 2px 5px -4px;
+        opacity: 0;
+        transition: .3s;
+
+        a, div {
+            display: none;
+        }
     }
 
     .hide-header {
@@ -258,7 +262,7 @@ footer {
         width: auto;
         height: auto;
         padding-top: 0;
-        background-color: white;
+        background-color: transparent;
 
         .fa-arrow-right {
             display: none;
