--- a/public/scss/skills.scss
+++ b/public/scss/skills.scss
@@ -2,6 +2,7 @@
 .web-skills {
     width: 100%;
     padding: 70px 5%;
+    overflow: hidden;
 
     h1 {
         font-size: 40px;
@@ -12,11 +13,21 @@
     }
 }
 
+.logo-container-skills {
+    position: relative;
+}
+
 .logo-placeholder-wrapper {
     width: 100%;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    transform:  translateX(0);
+}
+
+.clone-logo-wrapper {
+    position: absolute;
+    top: 0;
 }
 
 .logo-placeholder {
