putting all style in head tag

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,11 @@ html(lang='en')
         title Jeric Portfolio
         link(rel='stylesheet' type='text/css' href='/css/layout.css')
         link(rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css")
+        link(rel='stylesheet' type='text/css' href='css/home.css')
+        link(rel='stylesheet' type='text/css' href='css/about.css')
+        link(rel='stylesheet' type='text/css' href='css/project.css')
+        link(rel='stylesheet' type='text/css' href='css/skills.css')
+        link(rel='stylesheet' type='text/css' href='css/contact.css')
         script(src='/js/main.js' defer)
 
     body
