--- a/views/pages/about-content.pug
+++ b/views/pages/about-content.pug
@@ -80,4 +80,4 @@ section#about-me
         | Experience and explore them.
     button.btn-typ: a(href='project') GO TO PROJECT
 
-link(rel='stylesheet' type='text/css' href='css/about.css')
+//- link(rel='stylesheet' type='text/css' href='css/about.css')
