--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -23,4 +23,4 @@ block page-content
                     href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;tf=1&amp;source=mailto&amp;to=worldhail41@gmail.com"
                     target="blank") Send Email
     
-    link(rel='stylesheet' type='text/css' href='css/contact.css')
+    //- link(rel='stylesheet' type='text/css' href='css/contact.css')
