--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -57,4 +57,4 @@ block page-content
                     target="blank") Send Email
             p.contact-details-statement We can grab some coffee or something...
     
-    link(rel='stylesheet' type='text/css' href='css/home.css')
+    //- link(rel='stylesheet' type='text/css' href='css/home.css')
