--- a/views/pages/project-content.pug
+++ b/views/pages/project-content.pug
@@ -22,4 +22,4 @@ section#projects
                 i.fa-solid.fa-arrow-right
     button.btn-typ.see-project-btn SEE ALL PROJECTS
 
-link(rel='stylesheet' type='text/css' href='css/project.css')
+//- link(rel='stylesheet' type='text/css' href='css/project.css')
