--- a/views/pages/skills-content.pug
+++ b/views/pages/skills-content.pug
@@ -38,4 +38,4 @@ section.web-skills
                 width="200px"
                 height="200px")
 
-link(rel='stylesheet' type='text/css' href='css/skills.css')
+//- link(rel='stylesheet' type='text/css' href='css/skills.css')
