change absolute to relative path on link tag in layout.pug

--- a/views/pages/layout.pug
+++ b/views/pages/layout.pug
@@ -8,8 +8,8 @@ html(lang='en')
         meta(name='author' content='Jeric Chua')
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         title Jeric Portfolio
-        link(rel='stylesheet' type='text/css' href='/css/layout.css')
-        link(rel="stylesheet" href="/fontawesome-free-6.1.2-web/css/all.min.css")
+        link(rel='stylesheet' type='text/css' href='css/layout.css')
+        link(rel="stylesheet" href='fontawesome-free-6.1.2-web/css/all.min.css')
         link(rel='stylesheet' type='text/css' href='css/home.css')
         link(rel='stylesheet' type='text/css' href='css/about.css')
         link(rel='stylesheet' type='text/css' href='css/project.css')
@@ -37,7 +37,7 @@ html(lang='en')
             .ul-wrapper
                 i.fa-solid.fa-arrow-right.nav-close
                 ul.categories
-                    li.category-list.home-link: a.home(href='index') Home
+                    li.category-list.home-link: a.index(href='index') Home
                     li.category-list.project-link: a.project(href='project') Projects
                     li.category-list.about-link: a.about(href='about') About
                     li.category-list.skills-link: a.skills(href='skills') Skills
