--- a/views/pages/layout.pug
+++ b/views/pages/layout.pug
@@ -8,13 +8,13 @@ html(lang='en')
         meta(name='author' content='Jeric Chua')
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         title Jeric Portfolio
-        link(rel='stylesheet' type='text/css' href='css/layout.css')
-        link(rel="stylesheet" href='fontawesome-free-6.1.2-web/css/all.min.css')
-        link(rel='stylesheet' type='text/css' href='css/home.css')
-        link(rel='stylesheet' type='text/css' href='css/about.css')
-        link(rel='stylesheet' type='text/css' href='css/project.css')
-        link(rel='stylesheet' type='text/css' href='css/skills.css')
-        link(rel='stylesheet' type='text/css' href='css/contact.css')
+        link(rel='stylesheet' type='text/css' href='../public/css/layout.css')
+        link(rel="stylesheet" href='../public/fontawesome-free-6.1.2-web/css/all.min.css')
+        link(rel='stylesheet' type='text/css' href='../public/css/home.css')
+        link(rel='stylesheet' type='text/css' href='../public/css/about.css')
+        link(rel='stylesheet' type='text/css' href='../public/css/project.css')
+        link(rel='stylesheet' type='text/css' href='../public/css/skills.css')
+        link(rel='stylesheet' type='text/css' href='../public/css/contact.css')
         script(src='/js/main.js' defer)
 
     body
