correct the relative path for referencing images

--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -3,7 +3,7 @@
 }
 
 .map-placeholder {
-  background: url("/img/map.jpg") no-repeat content-box bottom;
+  background: url("img/map.jpg") no-repeat content-box bottom;
   background-size: cover;
   margin: 0 10%;
   position: relative;
