Modularize the js functions for page

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -56,5 +56,4 @@ block page-content
                     a(href="https://mail.google.com/mail/u/0/?view=cm&amp;fs=1&amp;tf=1&amp;source=mailto&amp;to=worldhail41@gmail.com"
                     target="blank") Send Email
             p.contact-details-statement We can grab some coffee or something...
-    
-    //- link(rel='stylesheet' type='text/css' href='css/home.css')
+        script(src='js/homeIntersectionObserver.js' defer)
