--- a/views/pages/skills-content.pug
+++ b/views/pages/skills-content.pug
@@ -37,5 +37,4 @@ section.web-skills
                 loading="lazy"
                 width="200px"
                 height="200px")
-
-//- link(rel='stylesheet' type='text/css' href='css/skills.css')
+    script(src='js/skillsLogoAnimation.js' defer)
