Add new modules while updating the script type

--- a/views/pages/layout.pug
+++ b/views/pages/layout.pug
@@ -15,7 +15,7 @@ html(lang='en')
         link(rel='stylesheet' type='text/css' href='css/project.css')
         link(rel='stylesheet' type='text/css' href='css/skills.css')
         link(rel='stylesheet' type='text/css' href='css/contact.css')
-        script(src='js/main.js' defer)
+        script(type='module' src='js/main.js' defer)
 
     body
         header
@@ -64,4 +64,4 @@ html(lang='en')
                 br
                 | Made with passion
     
-    script(src='js/ui/sidebar.js' defer)
+    script(type='module' src='js/ui/sidebar.js' defer)
