--- a/docs/scss/about.scss
+++ b/docs/scss/about.scss
@@ -99,10 +99,14 @@
     p {
         margin-bottom: 40px;
         font-size: 45px;
-        background: linear-gradient(to right, #3378cd, #4377d1, #5079ab);
+        font-weight: bolder;
+        background-image: linear-gradient(to right, #3378cd, #4377d1, #5079ab);
+        // background-image: linear-gradient(to right, #1a5296, #5c89d7, rgb(155, 196, 247));
+        // background-image: linear-gradient(to right, #154783, #608dc5);
+        -webkit-background-clip: text;
         background-clip: text;
         -webkit-text-fill-color: transparent;
-        font-weight: bolder;
+        color: transparent;
     }
 
     .btn-typ {
