--- a/views/pages/about-content.pug
+++ b/views/pages/about-content.pug
@@ -76,8 +76,6 @@ section#about-me
                 better loading times.
 .go-to-project
     p Knowing may not be enough.
-        span IF YOU HAVEN'T CHECKED MY PROJECTS YET,
-        | Experience and explore them.
+    p.span IF YOU HAVEN'T CHECKED MY PROJECTS YET,
+    p Explore and experience them.
     button.btn-typ: a(href='project') GO TO PROJECT
-
-//- link(rel='stylesheet' type='text/css' href='css/about.css')
