corrected some grammatical errors

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -40,7 +40,7 @@ block page-content
                 | Are you planning to have a website?
             p
                 i.fa-solid.fa-spinner
-                | Did you experience slow performance on your website?
+                | Have you experience slow performance on your website?
             p
                 i.fa-solid.fa-bug 
                 | Have you encountered some bugs on your website?
