--- a/views/pages/about-content.pug
+++ b/views/pages/about-content.pug
@@ -11,7 +11,7 @@ section#about-me
                 img(src="img/profile.png" alt="profile picture" width="400px" height="400px")
             .horizontal-line
             .vertical-line
-    article
+    article.me
         h2 Who Am I?
         p.
             I'm Jeric Chua! I'm from Dumaguete City, Negros Oriental,
@@ -19,14 +19,14 @@ section#about-me
             strong passion for finding the best possible ways of solving
             problems, where user experience and website/application
             functionalities play a huge impact in my interest.
-    article
+    article.myMission
         h2 My mission
         p.
             User experience and runtime performance are one of my priorities while
             having a good user interface. Therefore, I want to provide user interactivity 
             where it's non-complex but instead useful, important, and needed based on
             the website's content.
-    article
+    article.myStory
         h2 My story
         p.
             My learning journey started when I was a customer service representative in a 
