--- a/docs/scss/about.scss
+++ b/docs/scss/about.scss
@@ -9,16 +9,35 @@
     }
 
     article {
-        margin: auto;
-        padding: 0 5%;
+        width: 95%;
+        margin: 30px auto;
+        padding: 0 5% 20px;
         font-size: 1.3rem;
+        border-radius: 20px;
+        background-color: #f5f6f7;
+
+        p {
+            color: rgb(60, 60, 60);
+        }
     }
+
+    // article.me {
+        
+    // }
+
+    // article.myMission {
+        
+    // }
+
+    // article.myStory {
+        
+    // }
 }
 
 .profile-container {
     width: 100%;
     background-color: rgb(36, 37, 37);
-    padding: 50px 0;
+    padding: 90px 0 50px;
 }
 
 .design-guide {
@@ -75,7 +94,6 @@
         width: 100%;
         height: 100%;
         border-radius: 50%;
-        // background-color: #dcebff;
         background-color: #e7eaf1;
         border: 5px solid white;
     }
@@ -135,11 +153,15 @@
 
 @media screen and (min-width: 768px) {
     #about-me article {
-        padding: 0 15%;
+        width: 75%;
     }
 }
 
 @media screen and (min-width: 992px) {
+    #about-me article {
+        width: 60%;
+    }
+
     .go-to-project p {
         font-size: 60px;
     }
